# Buildor

./: .gitignore  APP_BUILD_DESCRIPTION.md  CLAUDE.md  SKILLS_BUILD.md  SKILLS_BUILD_PLAN.md  buildor_context.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
claude_knowledge/: agent_result_handling.md  architecture.md  decisions.md  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sdk-service/: build.mjs  package-lock.json  package.json  tsconfig.json
src-tauri/sdk-service/src/: index.ts  permission-gate.ts  router.ts  sdk-runner.ts  session-stream.ts  sessions.ts  types.ts  wire-format.ts
src-tauri/sdk-service/src/routes/: health.ts  sessions-crud.ts  sessions-interrupt.ts  sessions-message.ts  sessions-model.ts  sessions-permission.ts  sessions-stream.ts
src-tauri/sdk-service/test/: perm-test.ts  smoke.ts
src-tauri/src/: lib.rs  main.rs  sdk_client.rs  sdk_sidecar.rs  sdk_sse.rs  telemetry.rs
src-tauri/src/claude/: process.rs
src-tauri/src/commands/: account.rs  agents.rs  chat_history.rs  chat_images.rs  claude.rs  config.rs  filesystem.rs  flow.rs  git.rs  logging.rs  mailbox.rs  mod.rs  operation_pool.rs  project.rs  shell.rs  skill_sync.rs  skills.rs  telemetry.rs  window.rs  worktree.rs
src-tauri/src/config/: app_config.rs
src-tauri/src/git/: operations.rs
src-tauri/src/logging/: db.rs  mod.rs
src-tauri/src/operation_pool/: adaptive.rs  config.rs  lane.rs  mod.rs  pending_op.rs  persistence.rs  pool.rs  resource_key.rs
src-tauri/src/orchestrator/: engine.rs  types.rs
(+157 files in other folders)
